src/App.css
.recipeListLabel{
  padding: 5% 3% 0px 5%;
  text-align: center;
}
.noneFound{
  text-align:center;
}
.row{
  padding: 0px 4%;
}
.linkCard{
  color: black;
}
:hover .linkCard{
  text-decoration: none;
  color: black;
}
.carditself{
  font-size: 1.5vw;
  margin-bottom: 4%;
}
.card-img-top{
  width: 100%;
  height: 30vw;
}
.card-title{
  font-size: 4.5vw;
  height: 28%;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
          line-clamp: 2; 
  -webkit-box-orient: vertical;
}
.below-title{
  height: 40%;
  margin-top: 5%;
}
.card-text{
  font-size: 2.5vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.card-author{
  overflow: hidden;
  text-overflow: ellipsis;
}
.toRecipe{
  color: grey;
  text-decoration: underline;
  font-size: 2vw;
}
.campusLabel{
  padding-top: 1%;
  text-align: left;
}
.rowPics::after {
  content: "";
  clear: both;
  display: table;
}
.columnPics {
  margin-bottom: 5%;
  float: left;
  width: 10%;
  height: 20%;
}
.labelPlace{
  border-radius: 50%;
  width: 90%;
  padding: 0px 5%;
  background-color: black;
}
.lead{
  margin-top:5%;
}
.recipePic{
  width: 100%;
  height: 70vw;
}
.contact{
  margin: 0px 5%;
  text-align: center;
}
.bottomHalf{
  text-align: left;
  margin-left: 4%;
  margin-top: 1%;
}

.columnPicsTwo{
    float: left;
    width: 10%;
    height: 20%;
  }
  .backhome{
    margin: 2%;
  }

